# django-logging-tutorial

./: .gitignore  README.md  bootstrap.sh  initial_data.json  notebook.sh  pyproject.toml  requirements.extra.txt  requirements.txt  slides.html  tasks.py
catalog/: apps.py  log_utils.py  logging.py  models.py  signals.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/tests/: test_forms.py  test_models.py  test_views.py
locallibrary/: settings.py  urls.py
solutions/: admin.py  apps.py  es.yaml  logging.py  models.py  settings.py  signals.py
solutions/migrations/: 0001_initial.py
