[tool.poetry]
name = "django-logging-tutorial"
version = "0.1.0"
description = "Adaption of the MDN django-locallibrary-tutorial focused on logging"
authors = ["Fredrik Håård <fredrik@metallapan.se>"]
license = "CC BY 4.0"
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = ">=3.10"
django = "5.0.9"
elasticsearch = "^8.15.1"
dj-database-url = "2.1.0"
gunicorn = "22.0.0"
psycopg2-binary = "2.9.9"
wheel = "0.38.1"
whitenoise = "6.6.0"
python-dotenv = "1.0.1"
invoke = "^2.2.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
